{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 28,
  "lineage": "98605b76-d276-9b3a-2e86-9e76be3d3a84",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa63072dba82baa6",
            "arn": "arn:aws:ec2:us-east-1:300183693647:instance/i-05dd60b20e1b5474e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05dd60b20e1b5474e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sd-indirect-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a303543384bbaa65",
            "private_dns": "ip-10-0-1-42.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.42",
            "public_dns": "ec2-32-197-51-46.compute-1.amazonaws.com",
            "public_ip": "32.197.51.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea0463955ce8803c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebaa02cc7bf23240",
            "tags": {
              "Name": "indirect-client"
            },
            "tags_all": {
              "Name": "indirect-client"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d93df7271c19604"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.sd",
            "aws_security_group.sd",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amzn2",
            "tls_private_key.sd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa63072dba82baa6",
            "arn": "arn:aws:ec2:us-east-1:300183693647:instance/i-0f7a42d1766b54d61",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7a42d1766b54d61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "sd-indirect-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07b36476b0b1b2771",
            "private_dns": "ip-10-0-1-218.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.218",
            "public_dns": "ec2-18-206-148-225.compute-1.amazonaws.com",
            "public_ip": "18.206.148.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f13958bcb870bdd1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebaa02cc7bf23240",
            "tags": {
              "Name": "indirect-infra"
            },
            "tags_all": {
              "Name": "indirect-infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d93df7271c19604"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.sd",
            "aws_security_group.sd",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amzn2",
            "tls_private_key.sd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa63072dba82baa6",
            "arn": "arn:aws:ec2:us-east-1:300183693647:instance/i-0d5875ef50fce07aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5875ef50fce07aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sd-indirect-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04b83aec086ead3a1",
            "private_dns": "ip-10-0-1-161.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.161",
            "public_dns": "ec2-3-218-250-101.compute-1.amazonaws.com",
            "public_ip": "3.218.250.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f9ef60bdd99916e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebaa02cc7bf23240",
            "tags": {
              "Name": "indirect-worker1"
            },
            "tags_all": {
              "Name": "indirect-worker1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d93df7271c19604"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.sd",
            "aws_security_group.sd",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amzn2",
            "tls_private_key.sd"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa63072dba82baa6",
            "arn": "arn:aws:ec2:us-east-1:300183693647:instance/i-022d49e7ffb581a8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022d49e7ffb581a8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sd-indirect-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e69026a1b70eb58e",
            "private_dns": "ip-10-0-1-249.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.249",
            "public_dns": "ec2-3-231-154-181.compute-1.amazonaws.com",
            "public_ip": "3.231.154.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03f97cbd2829a77d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebaa02cc7bf23240",
            "tags": {
              "Name": "indirect-worker2"
            },
            "tags_all": {
              "Name": "indirect-worker2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d93df7271c19604"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.sd",
            "aws_security_group.sd",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amzn2",
            "tls_private_key.sd"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa63072dba82baa6",
            "arn": "arn:aws:ec2:us-east-1:300183693647:instance/i-034912f2bebebd93a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034912f2bebebd93a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sd-indirect-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f4e864ca41bac6f0",
            "private_dns": "ip-10-0-1-131.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.131",
            "public_dns": "ec2-98-86-165-225.compute-1.amazonaws.com",
            "public_ip": "98.86.165.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e4851d36c653e32",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebaa02cc7bf23240",
            "tags": {
              "Name": "indirect-worker3"
            },
            "tags_all": {
              "Name": "indirect-worker3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d93df7271c19604"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.sd",
            "aws_security_group.sd",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amzn2",
            "tls_private_key.sd"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa63072dba82baa6",
            "arn": "arn:aws:ec2:us-east-1:300183693647:instance/i-0a8e36579152e28b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a8e36579152e28b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sd-indirect-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b30d395da02112ef",
            "private_dns": "ip-10-0-1-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.198",
            "public_dns": "ec2-100-54-77-130.compute-1.amazonaws.com",
            "public_ip": "100.54.77.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f874e975398a4c7c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebaa02cc7bf23240",
            "tags": {
              "Name": "indirect-worker4"
            },
            "tags_all": {
              "Name": "indirect-worker4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d93df7271c19604"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.sd",
            "aws_security_group.sd",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amzn2",
            "tls_private_key.sd"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa63072dba82baa6",
            "arn": "arn:aws:ec2:us-east-1:300183693647:instance/i-05939d79529a0b4dd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05939d79529a0b4dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sd-indirect-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bcb94aa574952059",
            "private_dns": "ip-10-0-1-174.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.174",
            "public_dns": "ec2-98-84-46-51.compute-1.amazonaws.com",
            "public_ip": "98.84.46.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ba35fe76d21b0cf2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebaa02cc7bf23240",
            "tags": {
              "Name": "indirect-worker5"
            },
            "tags_all": {
              "Name": "indirect-worker5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d93df7271c19604"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.sd",
            "aws_security_group.sd",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amzn2",
            "tls_private_key.sd"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa63072dba82baa6",
            "arn": "arn:aws:ec2:us-east-1:300183693647:instance/i-0d9d532a7ad2c3b10",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9d532a7ad2c3b10",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sd-indirect-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e92db7dd8b477b2d",
            "private_dns": "ip-10-0-1-116.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.116",
            "public_dns": "ec2-3-238-52-214.compute-1.amazonaws.com",
            "public_ip": "3.238.52.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db87f943fde36f88",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebaa02cc7bf23240",
            "tags": {
              "Name": "indirect-worker6"
            },
            "tags_all": {
              "Name": "indirect-worker6"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d93df7271c19604"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.sd",
            "aws_security_group.sd",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amzn2",
            "tls_private_key.sd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300183693647:internet-gateway/igw-08334c5632b8944b4",
            "id": "igw-08334c5632b8944b4",
            "owner_id": "300183693647",
            "tags": {
              "Name": "sd-indirect-igw"
            },
            "tags_all": {
              "Name": "sd-indirect-igw"
            },
            "vpc_id": "vpc-0162d61ca458e6d04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300183693647:route-table/rtb-0f5482a544d59fe29",
            "id": "rtb-0f5482a544d59fe29",
            "owner_id": "300183693647",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08334c5632b8944b4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sd-indirect-rt"
            },
            "tags_all": {
              "Name": "sd-indirect-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0162d61ca458e6d04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acf168880ac3ed47",
            "route_table_id": "rtb-0f5482a544d59fe29",
            "subnet_id": "subnet-0ebaa02cc7bf23240"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300183693647:security-group/sg-04d93df7271c19604",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d93df7271c19604",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Trafico interno",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "sd-indirect-sg",
            "name_prefix": "",
            "owner_id": "300183693647",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sd-indirect-sg"
            },
            "tags_all": {
              "Name": "sd-indirect-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0162d61ca458e6d04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300183693647:subnet/subnet-0ebaa02cc7bf23240",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebaa02cc7bf23240",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300183693647",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sd-indirect-subnet"
            },
            "tags_all": {
              "Name": "sd-indirect-subnet"
            },
            "vpc_id": "vpc-0162d61ca458e6d04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300183693647:vpc/vpc-0162d61ca458e6d04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064f601834ddb2b22",
            "default_route_table_id": "rtb-0ff5f70710be0a14d",
            "default_security_group_id": "sg-0473c0efcea643791",
            "dhcp_options_id": "dopt-02fa375327fc37dd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0162d61ca458e6d04",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff5f70710be0a14d",
            "owner_id": "300183693647",
            "tags": {
              "Name": "sd-indirect-vpc"
            },
            "tags_all": {
              "Name": "sd-indirect-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}